# telegram-bot-python

./: main.py  pyproject.toml
