[project]
name = "telegram-bot-python"
version = "0.1.0"
description = "Telegram Bot mit Claude und OpenAI"
readme = "README.md"
authors = [{ name = "aether", email = "36173828+aeither@users.noreply.github.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "requests",
    "anthropic",
    "openai",
]

[tool.uv]
package = false
